Fix WordPress deployment file to correctly specify mySQL DB host from within Kubernetes

--- a/k8s/deploy_wp.yml
+++ b/k8s/deploy_wp.yml
@@ -34,7 +34,7 @@ spec:
 
         env:
         - name:  WORDPRESS_DB_HOST
-          value: mysqldb
+          value: deploy-mysqldb
 
         - name: WORDPRESS_DB_USER
           value: root
